<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoresFragment"
    android:padding="8dp"
    android:id="@+id/flScoresFragment">

    <LinearLayout
        android:background="#f0e0d0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp">
            <TextView
                style="@style/TextAutoSize"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/my_wins" />
            <TextView
                android:id="@+id/tvMyWins"
                style="@style/TextAutoSize"
                android:gravity="center"
                android:background="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="0" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp">
            <TextView
                style="@style/TextAutoSize"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/other_wins" />
            <TextView
                android:id="@+id/tvOtherWins"
                style="@style/TextAutoSize"
                android:gravity="center"
                android:background="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="0" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp">
            <TextView
                style="@style/TextAutoSize"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/total_games" />
            <TextView
                android:id="@+id/tvTotalGames"
                style="@style/TextAutoSize"
                android:gravity="center"
                android:background="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="0" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>